# Finvo_AI

./: .env  .gitignore  CLAUDE.md  README.md  README_new.md  app.py  pyproject.toml  run_streamlit.py  test_extractor.py
AI-Modules/: invoice_extractor.py
config/: __init__.py  settings.py
src/finvo_ai/: __init__.py
src/finvo_ai/agents/: invoice_extractor.py
src/finvo_ai/api/: routes.py
src/finvo_ai/core/: exceptions.py
src/finvo_ai/models/: schemas.py
src/finvo_ai/services/: document_loader.py
src/finvo_ai/utils/: logger.py
src/finvo_ai_streamlit/: app.py
tests/unit/: test_invoice_extractor.py
